--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.16.1",
+    "axios": "^1.2.0",
     "daisyui": "^2.41.0",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
