--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.2.0",
     "daisyui": "^2.41.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
