--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
