--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "daisyui": "^2.41.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
