--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
