--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^1.2.0",
     "daisyui": "^2.41.0",
     "date-fns": "^2.29.3",
-    "firebase": "^9.14.0",
+    "firebase": "^9.15.0",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
+    "react-search-autocomplete": "^8.2.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
